k8s/base/network-policies/allow-daily8-backend-to-postgres.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-daily8-backend-to-postgres
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: daily8-postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: daily8
              app.kubernetes.io/component: daily8-backend

      ports:
        - protocol: TCP
          port: 5432
