k8s/base/network-policies/allow-ingress-nginx-to-daily8-admin.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-daily8-admin

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: daily8
      app.kubernetes.io/component: daily8-admin

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller

      ports:
        - protocol: TCP
          port: 3004
